<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/block"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="300dp"
                app:layout_constraintVertical_bias="0.01"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintTop_toBottomOf="parent"/>

            <TextView
                android:id="@+id/tvcultivoSOP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="220dp"
                android:textColorHint="@color/black"
                android:text="@string/cultivo"
                app:layout_constraintTop_toBottomOf="@+id/block"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.01"
                />

            <Spinner
                android:id="@+id/cultivoSOP"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvcultivoSOP"
                app:layout_constraintVertical_bias="0.02"
                android:background="@drawable/box_material_sin"
                android:inputType="none"
                />

            <TextView
                android:id="@+id/tvccostosSOP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="220dp"
                android:textColorHint="@color/black"
                android:text="@string/costCenter"
                app:layout_constraintTop_toBottomOf="@+id/cultivoSOP"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.01"
                />

            <Spinner
                android:id="@+id/costCenterSOP"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvccostosSOP"
                app:layout_constraintVertical_bias="0.02"
                android:background="@drawable/box_material_sin"
                android:inputType="text"
                />

            <TextView
                android:id="@+id/tvphaseSOP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="220dp"
                android:textColorHint="@color/black"
                android:text="@string/activity"
                app:layout_constraintTop_toBottomOf="@+id/costCenterSOP"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.01"
                />

            <Spinner
                android:id="@+id/activitySOP"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/box_material_sin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvphaseSOP"
                app:layout_constraintVertical_bias="0.02"
                android:inputType="none"
                />

            <TextView
                android:id="@+id/tvlaborSOP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="220dp"
                android:textColorHint="@color/black"
                android:text="@string/job"
                app:layout_constraintTop_toBottomOf="@+id/activitySOP"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.01"
                />

            <Spinner
                android:id="@+id/jobSOP"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/box_material_sin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvlaborSOP"
                app:layout_constraintVertical_bias="0.02"
                android:inputType="none"
                />

            <TextView
                android:id="@+id/rendimientoSOP"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="220dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/jobSOP"
                app:layout_constraintVertical_bias="0.01"
                />

            <TextView
                android:id="@+id/cantidadSOP"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/rendimientoSOP"
                app:layout_constraintTop_toBottomOf="@+id/jobSOP"
                app:layout_constraintVertical_bias="0.01"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/advanceSOP"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"

                android:hint="@string/standar"

                app:boxBackgroundMode="outline"
                app:endIconMode="clear_text"
                app:helperText="@string/read_advance"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cantidadSOP"
                app:layout_constraintVertical_bias="0.05">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/advanceTSOP"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/timeISOP"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="220dp"
                android:hint="@string/hourI"
                android:textColorHint="@color/white"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/advanceSOP"
                app:layout_constraintVertical_bias="0.12"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/horaInicioSOP"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/hourI"

                app:boxBackgroundMode="outline"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:endIconMode="clear_text"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/timeISOP"
                app:layout_constraintTop_toBottomOf="@+id/advanceSOP"
                app:layout_constraintVertical_bias="0.1"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/hourIniSOP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/timeFSOP"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="220dp"
                android:hint="@string/hourF"
                android:textColorHint="@color/white"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/timeISOP"
                app:layout_constraintVertical_bias="0.13"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/horaFinSOP"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/hourF"

                app:boxBackgroundMode="outline"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:endIconMode="clear_text"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/timeFSOP"
                app:layout_constraintTop_toBottomOf="@+id/horaInicioSOP"
                app:layout_constraintVertical_bias="0.1"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/hourFinSOP"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/timeESOP"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="220dp"
                android:hint="@string/hourE"
                android:textColorHint="@color/black"
                style="?attr/materialButtonOutlinedStyle"
                app:strokeColor="@color/grey"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/timeFSOP"
                app:layout_constraintVertical_bias="0.15" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/horaESOP"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="16dp"
                android:autofillHints="username"
                android:hint="@string/hourE"

                app:boxBackgroundMode="outline"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:endIconMode="clear_text"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/timeFSOP"
                app:layout_constraintTop_toBottomOf="@+id/horaFinSOP"
                app:layout_constraintVertical_bias="0.15">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/hourESOP"
                    android:text="@string/food"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dniSOP"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="120dp"
                android:autofillHints="username"

                android:hint="@string/dni"
                android:textColorHint="@color/black"
                app:boxBackgroundMode="outline"
                app:endIconMode="clear_text"
                app:helperText="@string/read_document"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/horaESOP"
                app:layout_constraintVertical_bias="0.15">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/dniTSOP"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"

                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnScannerSOP"
                android:layout_width="59dp"
                android:layout_height="wrap_content"
                app:icon="@drawable/icon_scanner"
                app:layout_constraintBottom_toBottomOf="@+id/btnPreSOP"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/dniSOP"
                app:layout_constraintTop_toBottomOf="@+id/horaESOP"
                app:layout_constraintVertical_bias="0.15" />

            <Button
                android:id="@+id/btnPreSOP"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginEnd="100dp"
                android:background="@color/grey"
                android:hint="@string/save_pre"
                android:textColorHint="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dniSOP"
                app:layout_constraintVertical_bias="0.30"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</FrameLayout>